# icm

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_nl.md  README_pl.md  README_pt.md  README_ru.md  README_zh.md  SECURITY.md  TURSO.md  flake.nix  install.ps1  install.sh  release-please-config.json
.github/: copilot-instructions.md
.github/hooks/: icm.json
.github/workflows/: cd.yml  ci.yml  next-release.yml  pr-target-check.yml  release-please.yml  release.yml
Formula/: icm.rb
config/: default.toml
crates/icm-cli/: CHANGELOG.md  Cargo.toml
crates/icm-cli/src/: archive.rs  bench_data.rs  bench_format.rs  bench_knowledge.rs  cloud.rs  config.rs  extract.rs  extract_semantic.rs  http_api.rs  import.rs  install_manifest.rs  learn.rs  learn_tests.rs  main.rs  migration_tests.rs  recall_format.rs  summarizer.rs  tui.rs  upgrade.rs  web.rs
crates/icm-cli/src/uninstall/: backup.rs  discover.rs  formats.rs  locations.rs  mod.rs  mutate.rs  process.rs  report.rs  scan_dir.rs
crates/icm-cli/tests/: http_api_integration.rs  init_secure_integration.rs  uninstall_integration.rs  windows_debug_startup.rs
crates/icm-cli/tests/fixtures/hook_payloads/: README.md  claude_code_2x_bash.json  claude_code_2x_post_tool.json  claude_code_2x_read.json  claude_code_2x_write.json  legacy_post_tool.json  tool_response_string.json
crates/icm-cli/web/: .gitignore  package.json  vite.config.ts
crates/icm-cli/web/src/: app.css  app.html
crates/icm-cli/web/src/lib/: api.ts  types.ts
crates/icm-cli/web/src/routes/: +layout.svelte  +page.svelte
crates/icm-cli/web/src/routes/health/: +page.svelte
crates/icm-cli/web/src/routes/login/: +page.svelte
crates/icm-cli/web/src/routes/memoirs/: +page.svelte
crates/icm-cli/web/src/routes/memories/: +page.svelte
crates/icm-cli/web/src/routes/settings/: +page.svelte
crates/icm-cli/web/src/routes/topics/: +page.svelte
crates/icm-core/: Cargo.toml
crates/icm-core/src/: auto_link.rs  context_snapshot.rs  embedder.rs  error.rs  facts.rs  facts_store.rs  fastembed_embedder.rs  feedback.rs  feedback_store.rs  jina_v5_nano.rs  jina_v5_small.rs  learn.rs  lib.rs  memoir.rs  memoir_store.rs  memory.rs  store.rs  time_fmt.rs  transcript.rs  transcript_store.rs  wake_up.rs
crates/icm-install/: Cargo.toml
crates/icm-install/src/: main.rs
crates/icm-mcp/: Cargo.toml
crates/icm-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/icm-store/: Cargo.toml
crates/icm-store/src/: backend.rs  common.rs  dbcompat.rs  lib.rs  opensearch.rs  postgres.rs  schema.rs  store.rs
crates/icm-store/tests/: opensearch_backend.rs  postgres_backend.rs
deploy/: Dockerfile.opensearch  Dockerfile.postgres
deploy/k8s/: icm-writer-job-opensearch.yaml  icm-writer-job.yaml  opensearch.yaml  postgres.yaml
docs/: architecture.md  features.md  guide.md  integrations.md  opensearch-backend.md  postgres-backend.md  product.md  turso-backend.md
docs/issues/: jina-v5-fastembed-rs-F1.patch  jina-v5-slices.md
docs/superpowers/plans/: 2026-04-25-icm-agent-effectiveness.md
docs/superpowers/specs/: 2026-04-25-icm-agent-effectiveness-design.md
plugins/: opencode-icm.js  opencode-icm.ts
scripts/: bench-agent-sim.ts  bench-crossllm.sh  bench-longmemeval.py  bench-multilingual-3way.sh  bench-multilingual.sh  bench-ollama.sh  bench-quality.ts
scripts/hooks/: icm-post-tool.sh
