[workspace]
resolver = "2"
members = [
    "crates/icm-core",
    "crates/icm-store",
    "crates/icm-mcp",
    "crates/icm-cli",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
# Database
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
directories = "6"
