[workspace]
resolver = "2"
members = [
    "crates/icm-core",
    "crates/icm-store",
    "crates/icm-mcp",
    "crates/icm-cli",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
# Database
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Embeddings (optional)
fastembed = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_lenient = { version = "0.2", features = ["preserve_order"] }
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
directories = "6"

# Caching
lru = "0.18"

# HTTP (cloud sync)
ureq = { version = "2", features = ["json"] }
rpassword = "5"
sha2 = "0.10"
flate2 = "1"
tar = "0.4.45"

# Platform
libc = "0.2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Web dashboard
axum = "0.8"
# tokio is only used by the optional `web` feature (axum dashboard).
# `full` was overkill — we need the multi-thread runtime, the
# `#[tokio::main]` macro, and `tokio::net` for the TCP listener.
# Dropping `full` shaves ~3MB off the optimized binary on Linux.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
rust-embed = "8"
mime_guess = "2"
getrandom = "0.2"
