[package]
name = "icm-cli"
version = "0.10.28"
edition = "2021"
description = "Permanent memory for AI agents"
license = "Apache-2.0"
repository = "https://github.com/rtk-ai/icm"
keywords = ["memory", "ai-agents", "mcp", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "icm"
path = "src/main.rs"

[features]
default = ["embeddings", "tui"]
embeddings = ["icm-core/embeddings", "icm-mcp/embeddings"]
tui = ["dep:ratatui", "dep:crossterm"]
web = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:rust-embed", "dep:mime_guess", "dep:getrandom"]
vendored-openssl = ["openssl/vendored"]

[dependencies]
icm-core = { path = "../icm-core" }
icm-store = { path = "../icm-store" }
icm-mcp = { path = "../icm-mcp" }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
openssl = { version = "0.10", optional = true }
ureq = { workspace = true }
rpassword = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
serde_json_lenient = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[package.metadata.deb]
maintainer = "Patrick Szymkowiak"
copyright = "2024-2026 Patrick Szymkowiak"
extended-description = "Permanent memory for AI agents — MCP server with hybrid search, temporal decay, and multilingual embeddings."
section = "utility"
priority = "optional"
assets = [["target/release/icm", "usr/bin/", "755"]]

[package.metadata.generate-rpm]
assets = [{ source = "target/release/icm", dest = "/usr/bin/icm", mode = "755" }]
