[package]
name = "icm-cli"
version = "0.10.55"
edition = "2021"
description = "Permanent memory for AI agents"
license = "Apache-2.0"
repository = "https://github.com/rtk-ai/icm"
keywords = ["memory", "ai-agents", "mcp", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "icm"
path = "src/main.rs"

[features]
default = ["embeddings", "tui", "http-api", "backend-sqlite"]
embeddings = ["icm-core/embeddings", "icm-mcp/embeddings"]
tui = ["dep:ratatui", "dep:crossterm"]
# Storage backend selection (issue #301). Exactly one must be active.
# Default = in-process SQLite (single binary, zero external services).
# The opt-in PostgreSQL backend lets several `icm` processes / Kubernetes
# replicas share one memory store; build it with
# `--no-default-features --features "postgres,embeddings,tui,http-api"`.
backend-sqlite = ["icm-store/backend-sqlite", "icm-mcp/backend-sqlite"]
postgres = ["icm-store/postgres", "icm-mcp/postgres"]
# Persistent local HTTP server (`icm serve --http`) reusing the warm
# store + embedder. Lightweight: just axum + tokio. Issue #290.
http-api = ["dep:axum", "dep:tokio"]
# Full web dashboard (SvelteKit SPA + auth). Pulls everything `http-api`
# does plus the embedded-assets stack.
web = ["http-api", "dep:tower-http", "dep:rust-embed", "dep:mime_guess", "dep:getrandom"]
# `openssl` is not used directly in our source code, but it gets pulled
# transitively via reqwest / hyper-tls / etc. (depending on the active
# feature set). On cross-builds (e.g. aarch64-unknown-linux-gnu) the
# host-system OpenSSL doesn't match the target arch, so the release
# pipeline passes `--features vendored-openssl` to tell openssl-sys to
# build OpenSSL from source against the cross toolchain. Audit batch 10
# (PR #154) accidentally removed this feature; restored here so the
# release.yml cross-build matrix doesn't choke on
# `the package 'icm-cli' does not contain this feature: vendored-openssl`.
vendored-openssl = ["openssl/vendored"]

[dependencies]
icm-core = { path = "../icm-core" }
icm-store = { path = "../icm-store", default-features = false }
icm-mcp = { path = "../icm-mcp", default-features = false }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Optional, only enabled by the `vendored-openssl` feature (see
# explanation in [features] above). Cross-builds need it; native
# builds don't pull it in.
openssl = { version = "0.10", optional = true }
ureq = { workspace = true }
rpassword = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
serde_json_lenient = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[package.metadata.deb]
maintainer = "Patrick Szymkowiak"
copyright = "2024-2026 Patrick Szymkowiak"
extended-description = "Permanent memory for AI agents — MCP server with hybrid search, temporal decay, and multilingual embeddings."
section = "utility"
priority = "optional"
assets = [["target/release/icm", "usr/bin/", "755"]]

[package.metadata.generate-rpm]
assets = [{ source = "target/release/icm", dest = "/usr/bin/icm", mode = "755" }]
