[package]
name = "icm-core"
version = "0.3.0"
edition = "2021"

[features]
default = []
embeddings = ["fastembed"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
fastembed = { workspace = true, optional = true }
