[package]
name = "icm-core"
version = "0.10.2"
edition = "2021"

[features]
default = []
embeddings = ["fastembed", "directories"]
jina-v5 = ["dep:ort", "dep:tokenizers", "dep:hf-hub", "dep:ndarray"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
toml = { workspace = true }
fastembed = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
