[package]
name = "icm-install"
version = "0.1.0"
edition = "2021"
description = "Installer for icm — downloads and installs the latest release"
license = "Apache-2.0"
repository = "https://github.com/rtk-ai/icm"

[[bin]]
name = "icm-install"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
