[package]
name = "icm-mcp"
version = "0.4.0"
edition = "2021"

[features]
default = []
embeddings = ["icm-core/embeddings"]

[dependencies]
icm-core = { path = "../icm-core" }
icm-store = { path = "../icm-store" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
