[package]
name = "icm-mcp"
version = "0.10.34"
edition = "2021"

[features]
default = ["backend-rusqlite"]
backend-rusqlite = ["icm-store/backend-rusqlite"]
turso = ["icm-store/turso"]
embeddings = ["icm-core/embeddings"]

[dependencies]
icm-core = { path = "../icm-core" }
icm-store = { path = "../icm-store", default-features = false }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
